2013-03-06 Paulo Andrade <pcpa@gnu.org>

	* check/float.tst: Comment out the int to negative infinity
	test in mips for the moment because not all Loongson agrees
	on the result.

	* lib/jit_disasm.c: Add a test instead of an assertion
	when loading symbols for disassembly due to a failure with
	a simple binutils build in Debian mipsel64.

2013-03-06 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_private.h, lib/jit_arm-cpu.c,
	lib/jit_arm.c, lib/jit_disasm.c, lib/jit_mips-cpu.c,
	lib/jit_mips.c, lib/jit_note.c, lib/jit_ppc-cpu.c,
	lib/jit_ppc.c, lib/jit_print.c, lib/jit_sparc-cpu.c,
	lib/jit_sparc.c, lib/jit_x86-cpu.c, lib/jit_x86.c,
	lib/lightning.c: Add an extra structure for data storage
	during jit generation, and release it after generating
	jit, to reduce a bit memory usage, and also to make it
	easier to understand what data is available during
	jit runtime.

2013-03-06 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Make data and code buffer readonly.

2013-02-20 Paulo Andrade <pcpa@gnu.org>

	* doc/body.texi: Fool proof validate the examples of what
	an assembly-language programmer would write and correct the
	wrong sparc example.

2013-02-19 Paulo Andrade <pcpa@gnu.org>

	* doc/body.texi: Add back the SPARC code generation example.

2013-02-19 Paulo Andrade <pcpa@gnu.org>

	* check/lightning.c: Remove state flag to work with partial
	sparc port, by just disassembling if there was incomplete
	code generation.

	* jit_sparc-cpu.c: Correct wrong range check for immediate
	integer constants (off by one bit shift).
	  Correct macro implementing equivalent "rd %y, rd" assembly.
	  Implement qmul* and qdiv*.

	* jit_sparc.c: Update for qmul* and qdiv* and remove logic
	to handle incomplete code generation during sparc port.

2013-02-18 Paulo Andrade <pcpa@gnu.org>

	* check/float.tst: Add sparc to list of known NaN and +-Inf
	to integer conversion.

	* check/lightning.c: Define __sparc__ to preprocessor in
	the sparc backend.
